--- a/style.css
+++ b/style.css
@@ -136,7 +136,8 @@ input[type=submit]:hover {
 
 .attribution { 
     font-size: 11px; 
-    text-align: center; }
+    text-align: center; 
+  }
     
 .attribution a { 
     color: hsl(228, 45%, 44%); }
